--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -46,17 +46,15 @@ repos:
     -   id: mypy
         additional_dependencies: [types-pyyaml]
         exclude: ^testing/resources/
+        
   - repo: https://github.com/PyCQA/flake8
     rev: 7.1.1
     hooks:
     -   id: flake8
-  # # Machine learning-specific hooks
-  # - repo: https://github.com/adrienbrunel/pre-commit-hooks
-  #   rev: v1.0.0
-  #   hooks:
-  #     - id: check-mlflow
-  #       name: Check MLflow
-  #       entry: check_mlflow.py
-  #       language: script
-  #       types: [python]
-  #       args: [--config=config.yaml]
+
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    rev: v0.1.3
+    hooks:
+      - id: ruff
+        args: [--fix, --exit-non-zero-on-fix]
+      - id: ruff-format
